Worked on Phil 2210 morality  and religion note

--- a/Phil 2210 - Introduction to Ethics/1. Morality and Religion.tex
+++ b/Phil 2210 - Introduction to Ethics/1. Morality and Religion.tex
@@ -91,7 +91,41 @@
 
     \subsection*{Natural Law Theory (NLT)}
     \begin{itemize}
-        \item 
+        \item Since not every accepts solutions proposed to the \textbf{Euthyphro dilemma}, \textbf{St. Thomas Aquinas} proposed an alternative way of grounding morality in religion. This was is \textbf{Natural Law Theory}.
+        \item \textbf{Natural Law Theory} can be summarized in terms of three theses:
+        \begin{itemize}
+            \item Every event and every action has a \textbf{purpose}.
+            \item There are \textbf{laws of nature} that represent the \textbf{purposes} of actions and events.
+            \item God provides us with the \textbf{ability to reason} in order to comprehend the \textbf{laws of nature}.
+        \end{itemize}
+        \item In \textbf{NLT}, moral laws are \textbf{laws of nature}, not \textbf{commands of God}. God enters into morality only at the level of \textbf{providing us with the ability to reason}.
+        \begin{itemize}
+            \item This allows NLT to avoid the problems that exist with DCT.
+        \end{itemize}
+        \item Essentially, \textbf{NLT} is a theory that it is \textbf{immoral to use things in a way that does not fit their purpose}.
+        \begin{itemize}
+            \item An example would be: arms were created to life things, using them for any other purpose (such as to hit someone) is morally wrong.
+        \end{itemize}
+    \end{itemize}
+
+    \subsection*{Problems with NLT}
+    \begin{itemize}
+        \item One problem with \textbf{NLT} is that it is not clear that \textbf{every event has a purpose}.
+        \begin{itemize}
+            \item For example, we do not have eyes for the purpose of seeing, rather we have eyes as an evolutionary adaptation.
+        \end{itemize}
+        \item Another problem with \textbf{NLT} is that it commits the \textbf{naturalistic fallacy} (infering "should" from "is"). We are deducing moral oughts from "the purpose an event is". 
+        \item Arguably the most serious object is that an \textbf{atheist} could still \textbf{act morally} since having the ability to reason \textbf{does not depend} on \textbf{believing in God}.
+        \begin{itemize}
+            \item Implying God is irrelevant, since one could be moral without believing in God.
+        \end{itemize} 
+    \end{itemize}
+
+    \subsection*{Moral Codes}
+    \begin{itemize}
+        \item Another approach to ground morality in religion, discuessed by \textbf{James Rachels}, is that \textbf{religious scriptures can be regarded as moral codes}.
+        \item To determine if an act is morally right or morally wrong, you consult the scripture.
+        \item The problem with this approach is that \textbf{scripture is open to interpretation}. You could interperate it \textbf{literally, metaphorically, historically, etc}. People can also take scripture passages out of context, or ignore the meaning of the terms at that time in history.
     \end{itemize}
 
 \end{document}
