Started working on Comp 3300 deadlock note

--- a/Phil 2210 - Introduction to Ethics/1. Morality and Religion.tex
+++ b/Phil 2210 - Introduction to Ethics/1. Morality and Religion.tex
@@ -128,4 +128,40 @@
         \item The problem with this approach is that \textbf{scripture is open to interpretation}. You could interperate it \textbf{literally, metaphorically, historically, etc}. People can also take scripture passages out of context, or ignore the meaning of the terms at that time in history.
     \end{itemize}
 
+    \section*{\centering{Non-Religious Natural Law Theories}}
+
+    \subsection*{John Finnis' Natural Law}
+    \begin{itemize}
+        \item According to \textbf{John Finnis}, natural law theory is used by philosophers to make sense of the following claims that seem to be beyond or prior to positivistic law:
+        \begin{enumerate}
+            \item That was a crime against humanity.
+            \item That action was morally unreasonable, inhuman, curel, etc.
+            \item That person should be immune for legal liability.
+        \end{enumerate}
+        \item As \textbf{Finnis} notes, it's almost as if there is an \textbf{implicit appeal} to a \textbf{"higher law"} - a law of nature.
+        \item \textbf{Natural law} tries to make sense of these \textbf{claims} by providing a \textbf{general account} of \textbf{good and evil} in human life.
+        \item Finnis claims that a general theory of good and evil will contain the following kinds of propositions:
+        \begin{enumerate}
+            \item \textbf{Normative claims} about what is right and wrong,
+            \item \textbf{Non-Normative claims} justifications of the normative claims. 
+        \end{enumerate}
+        \item Finnis wants to make it clear that \textbf{natural laws} are \textbf{not mysterious entities that can be read off from nature}, and that \textbf{natural law theories} do not claim that ther laws of nature are \textbf{physical laws} (morality $\ne$ science).
+        \begin{itemize}
+            \item It is important to recognize that natural law theories are distinct from logic, technology, and science.
+        \end{itemize}
+        \item 
+    \end{itemize}
+
+    \subsection*{John Finnis' Natural Law Definition}
+    \begin{itemize}
+        \item Finnis claims that the term \textbf{law} does \textbf{not mean an imperative / command} by a superior will such as \textbf{God}.
+        \item The term \textbf{law} refers to \textbf{standards of action} which are \textbf{normative}, such that \textbf{not following} these \textbf{standards} is \textbf{unreasonable}.
+        \item Finnis defines the term \textbf{natural law} as one of the following:
+        \begin{enumerate}
+            \item \textbf{Natural law} is not positive | that is, it is prior to any positioning of any individual, group, or legal system.
+            \item \textbf{Natural laws} are standards that \textbf{transcend positive law} | that can be used to critically assess positive law.
+        \end{enumerate}
+        \item 
+    \end{itemize}
+
 \end{document}
