Finished Phil 2210 morality and religion note

--- a/Comp 3670 - Computer Networks/4. Network Layer.tex
+++ b/Comp 3670 - Computer Networks/4. Network Layer.tex
@@ -123,4 +123,9 @@
         \item With \textbf{interconnnection network switching}, is similar to the bus, except we can \textbf{transfer several packets in parallel}.
     \end{itemize}
 
+    \subsection*{Input Port Functions}
+    \begin{itemize}
+        \item 
+    \end{itemize}
+
 \end{document}
