--- a/Phil 2210 - Introduction to Ethics/1. Morality and Religion.tex
+++ b/Phil 2210 - Introduction to Ethics/1. Morality and Religion.tex
@@ -156,12 +156,68 @@
     \begin{itemize}
         \item Finnis claims that the term \textbf{law} does \textbf{not mean an imperative / command} by a superior will such as \textbf{God}.
         \item The term \textbf{law} refers to \textbf{standards of action} which are \textbf{normative}, such that \textbf{not following} these \textbf{standards} is \textbf{unreasonable}.
-        \item Finnis defines the term \textbf{natural law} as one of the following:
+        \item Finnis defines the term \textbf{natural law} as the following:
         \begin{enumerate}
             \item \textbf{Natural law} is not positive | that is, it is prior to any positioning of any individual, group, or legal system.
             \item \textbf{Natural laws} are standards that \textbf{transcend positive law} | that can be used to critically assess positive law.
+            \item \textbf{Natural laws} are standards that are objective in the sense that if one does not follow them, the one is in error.
+            \item \textbf{Natural laws} promote human fluorishing.
         \end{enumerate}
+        \begin{itemize}
+            \item Essentially he is saying natural laws don't come from God, they don't necessarily come from us, they are reasonable, they are objective, they shouldn't be confused with laws created by humans, and they promote human fluorishing.
+            \item Natural laws are independent of human laws.
+        \end{itemize}
         \item 
+    \end{itemize}
+
+    \subsection*{John Finnis' Critique of Morala Skepticism}
+    \begin{itemize}
+        \item Finnis wants to claim that \textbf{all skeptical attempts to criticize natural law theory} are based on what Hume and G.E. Moore called the \textbf{naturalistic fallacy} (the fallacy of trying to derive "should" from "is").
+        \item He wants to \textbf{distinguish non-skeptical theories} from \textbf{natural law theory}, i.e. not all ethical theories that avoid the naturalistic fallacy are necessarily natural law theories. He does this with the following claims:
+        \begin{enumerate}
+            \item Natural law theories vs other theories are willing to identify certain universal human goods that contribute to human flourishing, such as knowledge, life, friendship.
+            \item Natural law theories do not rest on the assumption that moral truths are apprehended by intuition, or that they can be read off from nature. Rather, moral truths are based on "data" that involve theoretical knowledge and true opinion.
+            \item Natural law theories do not posit an overarching end to which all human actors refer (for example happiness with Mill).
+            \item Natural law theories also try to clarify the methods of the social sciences.
+        \end{enumerate}
+    \end{itemize}
+    
+    \subsection*{Ross Shafer-Landau's Natural Law}
+    \begin{itemize}
+        \item Ross begins by noting that we \textbf{we are all animals}; we are natural creatures.
+        \item Like \textbf{all natural creatures}, we need \textbf{food, shelter,} and are \textbf{vulnerable to harm}.
+        \item Ross believes that since we are \textbf{a part of nature}, \textbf{morality} may lie in \textbf{knowing our place} in the \textbf{natural order} of things.
+        \item Ross  claims that this can be done by doing the best thing for human nature. But that just creates another question: what is human nature?
+        \item He discusses two competing conceptions of human nature, but ultimately rejects both:
+        \begin{enumerate}
+            \item Human nature is what is \textbf{innately human} (not thins we acquire through socialization, learning, etc).
+            \begin{itemize}
+                \item He goes on to reject this conception on the grounds that some innate traits humans have are repulsive (such as greed, or mistrust).
+                \item He reaches the conclusion that \textbf{the morality of our actions does not depend on whether they are innate or acquired}.
+            \end{itemize}
+            \item Human nature is what \textbf{all huams have in common} (implying unique traits are accidental or non-natural).
+            \begin{itemize}
+                \item He goes on to reject this conception on the grounds that there may be no universal human characteristics, and even if there are, they may not be able to provide moral guidance.
+            \end{itemize}
+        \end{enumerate}
+        \item He goes on to give the following definition: \textbf{Human nature} is what we are designed \textbf{to be}, and \textbf{to do}. It is some functions of ours, some purpose that we are ment to serve, and some end that we were designed for.
+        \item He grants that \textbf{each organ} we have, have a \textbf{purpose}, but wants to find out if it \textbf{makes sense} to say that \textbf{the person} as a whole \textbf{has a function}.
+        \begin{itemize}
+            \item Some people call this the \textbf{fallacy of composition}; when you assume that a property that holds true for a part of something, is true for the entire thing.
+            \item An example would be assuming that NaCl is dangerous because Na is highly reactive, and Cl is toxic.
+        \end{itemize}
+        \item He proposes two attempts to make sense of his concept of \textbf{natural purpose}:
+        \begin{enumerate}
+            \item The \textbf{Efficiency Model of Natural Purpose}: According to the efficiency model, we can determine a thing's \textbf{natural purpose} by \textbf{seeing what it is most efficient at doing}. Thus, the natural purpose of humans is determined by what they are most efficient at doing. Humans are efficient at writing essays, solving puzzles, building things, etc.
+            \begin{itemize}
+                \item There is a problem with this model, if some humans are not good at writing essays or solving puzzles, that implies they are immoral; which is absurd.
+                \item Also we are efficient at building weapons and killing people, which is clearly not moral.
+            \end{itemize} 
+            \item The \textbf{Fitness Model of Natural Purpose}: One could argue that the \textbf{natural purpose} of \textbf{humans} is to \textbf{survive and reproduce}, allowing them to pass on their genes to future generations. Actions that make improve one's fitness (by helping them pass on their genes) are morally right, anything else is morally wrong.
+            \begin{itemize}
+                \item The problem with this mode, is that immoral things can improve our fitness, such a stealing, killing, etc. Thus this is not a good model.
+            \end{itemize}
+        \end{enumerate}
     \end{itemize}
 
 \end{document}
