Finished Phil 2210 feminist theories note

--- a/Phil 2210 - Introduction to Ethics/2. Feminist Theories.tex
+++ b/Phil 2210 - Introduction to Ethics/2. Feminist Theories.tex
@@ -80,7 +80,6 @@
                 \item George Sher criticized this by saying t hat moral rules are not inconsistent with care and concern, and for that matter, care also involves consideration of quality, justice, and fairness.
             \end{itemize} 
         \end{enumerate}
-        \item 
     \end{itemize}
 
     \section*{The Ethics of Care}
@@ -97,6 +96,29 @@
         \end{enumerate}
         \item Held notes that \textbf{traditional moral theories} portray \textbf{moral dilemmas} as involving a \textbf{conflict} between \textbf{egoistic concerns} and \textbf{universal moral principles}. This is something that is \textbf{omitted} from \textbf{the ethics of care}.
         \item She also notes that \textbf{traditional moral theories} that ignore the \textbf{domain on the household and the family} leads to \textbf{unequal power dynamics} that \textbf{women and children do not choose}.
+    \end{itemize}
+
+    \subsection*{Marilyn Friedman's Beyond Caring}
+    \begin{itemize}
+        \item Friedman summarized Gilligan's view on women and ethics: 
+        \begin{itemize}
+            \item The \textbf{male moral voice} is given preference in a \textbf{patriarchial society}. In such a society, \textbf{moral judgements} are derived from \textbf{abstract universal moral rules}.
+            \item The main concern of \textbf{male-based ethics} is with \textbf{rights and justice}.
+            \item The \textbf{female moral voice}, which is \textbf{under-valued}, and largely \textbf{ignore}, derives \textbf{moral judgments} from \textbf{contextualize situations that are unique}.
+            \item \textbf{Moral judgments} involve \textbf{empathy, compassion, care, concern} and the \textbf{avoidance of selfishness}.
+        \end{itemize}
+        \item Friedman's article has three main points:
+        \begin{enumerate}
+            \item Even if there is \textbf{not sufficient evidence }to confirm Gilligan's view that \textbf{women and men reason differently about morality}, there is a \textbf{culturally-based difference} between the \textbf{two genders}. Which are acquired through socialization.
+            \item The concepts of \textbf{care and justice overlap}, which may explain the \textbf{lack of evidence} for Gilligan's claims.
+            \item Even if \textbf{care and justice overlap}, \textbf{care} emphasizes \textbf{responsiveness to others} and their \textbf{uniqueness}, whereas \textbf{justice} emphasizes \textbf{adherence to abstract rules}.
+        \end{enumerate}        
+        \item Friedman distinguishes between two hypotheses advanced by Gilligan (she rejects the first one, and accepts the second one):
+        \begin{enumerate}
+            \item \textbf{The Different Voice Hypotheses} | The care perspective is distinct from the moral perspective which is centered on justice and rights.
+            \item \textbf{The Gender Difference Hypothesis} | The care perspective is typically women's moral voice, whereas the justice perspective is typically men's moral voice.
+        \end{enumerate}
+        \item Her conclusion is that "We need nothing less thatn to 'demoralize' the genders, advance beyond the discussion of justice from care, and enlarge the symbolic access of each gender to all available conceptual and social resources for the sustenance and enrichment of our collective moral life".
     \end{itemize}
 
 \end{document}
