--- a/Phil 2210 - Introduction to Ethics/3. Meta Ethics.tex
+++ b/Phil 2210 - Introduction to Ethics/3. Meta Ethics.tex
@@ -59,6 +59,12 @@
                 \item Second-order moral questions are concerned with the possible existence of objective moral values, independently of any system of values.
             \end{enumerate}
             \item He distinguishes moral skepticism from simple subjectivism.
+            \item He distinguishes the thesis that \textbf{there are objective moral values} fomr the thesis that \textbf{there are inter-subjective values}.
+            \begin{itemize}
+                \item One could be a moral skeptic while still believing that there are inner-subjective values shared across both individuals and cultures.
+                \item These inter subjective values may still not be objective in the sense that they are true for all time.
+            \end{itemize}
+            \item 
         \end{enumerate}
         \item 
     \end{itemize}
@@ -66,6 +72,7 @@
     \subsection*{Thomas Nagel}
     \begin{itemize}
         \item \textbf{Thomas Nagel} (a moral realist) admits that there is \textbf{atleast one very general value} that is \textbf{objective}.
+        \item 
     \end{itemize}
 
 \end{document}
